# ictora

./: .gitignore  README.md  ictora.cabal  notes  project  specification
example_programs/: simple.ict
ictc/: Main.hs  Main.idr  ictc.ipkg
libict/: CodeGen.hs  IR.hs  IctCore.hs  ImperativeIR.hs  Lang.hs  Parser.hs  Syntax.hs  Type.hs  Util.hs  libict.ipkg
libict/CodeGen/: Convert.hs  State.hs  Type.hs
libict/Core/: Lang.hs  Type.hs
libict/Ictora/: Misc.idr  Util.idr  Util.idr.old
libict/Ictora/Core/: LamLift.idr  Lang.idr  Scope.idr  ToG.idr  Types.idr
libict/Ictora/G/: Lang.idr  Types.idr
libict/Ictora/GCore/: Lang.idr  Lang.idr.old  ToSpirV.idr  ToSpirV.idr.old  Type.idr  Types.idr  Util.idr  Util.idr.old
libict/Ictora/Ict/: Lang.idr  Lang.idr~  Types.idr  Types.idr~
libict/Ictora/Syntax/: Lang.idr  Parse.idr  ToIct.idr  ToIct.idr~  TypeError.idr
libict/Lang/Ict/: Common.idr  DBIndexed.idr
libict/SpirV/: Lang.hs
libict/Util/: IndexIs.idr
libspirv/: libspirv.ipkg
libspirv/SpirV/: CodeGen.hs  Lang.hs  Operations.hs  Options.hs  Type.hs
libspirv/SpirV/Raw/: Misc.idr  Operations.idr  Options.idr  Output.idr  Program.idr
libspirv/SpirV/Typed/: Builder.idr  Type.idr  TypeMap.idr
