name:                ictora
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eayus/ictora#readme
license:             MIT
license-file:        LICENSE
author:              Ellis Kesterton
-- maintainer:          example@example.com
-- copyright:           2019 Ellis Kesterton
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ictora
  hs-source-dirs:      ictc
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, libict, libspirv, mtl

library libict
  hs-source-dirs:      libict
  exposed-modules:     Parser, IR, Syntax, Core.Lang, Core.Type, CodeGen.Convert, CodeGen.State
  other-modules:       Util, Lang
  build-depends:       base, megaparsec, mtl, libspirv
  default-extensions:  FlexibleInstances, GADTs, KindSignatures, DataKinds, TemplateHaskell
  default-language:    Haskell2010

library libspirv
  hs-source-dirs:      libspirv
  exposed-modules:     SpirV.Lang, SpirV.Options, SpirV.Operations, SpirV.CodeGen
  build-depends:       base
  default-extensions:  GADTs, DataKinds, KindSignatures, FlexibleInstances
  default-language:    Haskell2010
